methods.picture.MethodsPictureLarge.scala.error
Erreur de compilation :
MethodsPictureLarge:2: error: not found: value n
  while (n != 9){
         ^